2002-03-05  Shivram U  <shivaram.upadhyayula@wipro.com>
	* src/bonobo-mdi.c : (bonobo_mdi_show_status) Now using 
	bonobo_ui_component_set_status() to set the status.
	(bonobo_mdi_flash), (remove_message_timeout) Using 
	bonobo_mdi_show_status to flash the message.
	* src/gtkhex.c : (gtk_hex_finalize) fixed wrong unref of GObjects.

2002-03-04  Shivram U  <shivaram.upadhyayula@wipro.com>
	* enabled the print functionality.
	* changed from using GdkFont to PangoFont.
 
2002-03-01  Santhana krishnan  <santhana.krishnan@wipro.com>

       * applied a patch to fix problems on undo operatoins.
       * patch for the bug 71464 ( src/hex-document.c:319 )

2002-03-01  Shivram U  <shivaram.upadhyayula@wipro.com>
	* configure.in : Added checks for gconftool-2
	* Makefile.am : Now installing the schema file in the gconf/schemas
	directory. Fixes #(73040)

2002-02-28  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/hex-document.c : (hex_document_class_init) Overriding 
	bonobo_mdi_child class's get_config_string() virtual function.
	Needed for session management.
	
	* src/main.c : (main) Setting the default window icon.
	Removed unnecessary code in the main function

2002-02-06  Jaka Mocnik  <jaka@gnu.org>

	* migrated most of the ui_engine stuff to use ui_component.
	* made Group items radio items.
	* made Insert Mode a toggle item.
	* added listener for both of the above.
	* removed a bunch of warnings.

2002-02-06  jacob berkman  <jacob@ximian.com>

	* src/Makefile.am (ghex2_SOURCES): add some missing sources

	* configure.in (AC_OUTPUT): remove omf-install/Makefile for now

2002-02-05  Jaka Mocnik  <jaka@gnu.org>

	* imported GNOME2 port by the kind people at wipro.
	
2001-11-13  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: added block marking and clipboard handling.
	* src/print.c: fixed to work with gnome-print >= 0.32.
	* configure.in: check for GnomePrint >= 0.32.

2001-09-08  Wang Jian  <lark@linux.net.cn>
