@@ -108,7 +108,7 @@ To change the gconftool target use the - -config-source=blah option to gconftool
       <owner>ghex2</owner>
       <type>string</type>
       <locale name="C">
-        <default>Courier</default>
+        <default>Courier 10</default>
         <short>Default Data Font</short>
         <long>Default Data Font</long>
       </locale>
@@ -130,7 +130,7 @@ To change the gconftool target use the - -config-source=blah option to gconftool
       <owner>ghex2</owner>
       <type>string</type>
       <locale name="C">
-        <default>Helvetica</default>
+        <default>Helvetica 12</default>
         <short>Default Header Font</short>
         <long>Default Header Font</long>
       </locale>
